--- a/codes/multival-linear-regression.ipynb
+++ b/codes/multival-linear-regression.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The prediction of premium to be paid by a person with 100 years and BMI of 35 is: 89085.44151339598\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "import numpy as np\n",
@@ -19,16 +27,21 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# TO DO: load dataset\n",
-    "\n",
+    "df = pd.read_csv('../datasets/insurance.csv')\n",
     "# TO DO: identify variables (independent and dependent)\n",
-    "\n",
+    "x = df[['Age','BMI']]\n",
+    "y = df['Premium']\n",
     "# TO DO: train the linear regression model\n",
-    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(x, y)\n",
     "# TO DO: make predictions\n",
-    "\n",
+    "y_predict = model.predict(x)\n",
     "# TO DO: visualize the data and model\n",
     "\n",
-    "# TO DO: predict the premium for a 100 year old person"
+    "# TO DO: predict the premium for a 100 year old person\n",
+    "x_new = pd.DataFrame([[100, 35]], columns=['Age', 'BMI'])\n",
+    "premium_predict = model.predict(x_new)[0]\n",
+    "print ('The prediction of premium to be paid by a person with 100 years and BMI of 35 is:',premium_predict)"
    ]
   },
   {
@@ -40,19 +53,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The predicted premium for a 100-year-old person with a BMI of 35 is 90036.87822925406\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
     "# TO DO: transform Features (use degree=2)\n",
-    "\n",
+    "poly = PolynomialFeatures(degree=2)\n",
+    "x_poly = poly.fit_transform(x)\n",
     "# TO DO: train the model\n",
-    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(x_poly,y)\n",
     "# TO DO: make predictions\n",
+    "y_predict = model.predict(x_poly)\n",
     "\n",
-    "# TO DO: visualize the data and model"
+    "x_new =  pd.DataFrame([[100, 35]], columns=['Age', 'BMI'])\n",
+    "x_new_poly = poly.transform(x_new)\n",
+    "premium_predict = model.predict(x_new_poly)[0]\n",
+    "\n",
+    "print('The predicted premium for a 100-year-old person with a BMI of 35 is',premium_predict)\n",
+    "# TO DO: visualize the data and model\n"
    ]
   }
  ],
@@ -72,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
