--- a/codes/logistic-regression.ipynb
+++ b/codes/logistic-regression.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Part I: Load the Dataset and Calculate the Probability of infection"
+    "#### Part I: Load the Dataset and Calculate the Probability of infection"
    ]
   },
   {
